--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -6,3 +6,9 @@
 /User.class
 /Role.class
 /MainFrame.class
+/adminFrame$1.class
+/adminFrame.class
+/userFrame$1.class
+/userFrame.class
+/customerFrame$1.class
+/customerFrame.class
