Product view fully complete, Adding products nearly done

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -15,3 +15,14 @@
 /adminFrame$2.class
 /customerFrame$2.class
 /adminFrame$3.class
+/StockReader.class
+/ConcreteProduct.class
+/Product.class
+/ConnectivityType.class
+/ProductCategory.class
+/Keyboard.class
+/Mouse.class
+/DeviceType.class
+/Layout.class
+/adminFrame$4.class
+/StockManager.class
