Refactor class names and update stock information

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,29 +1,9 @@
-/MainFrame$2.class
-/MainFrame$1.class
-/f319859/
-/MainFrame1$1.class
-/MainFrame1.class
-/User.class
-/Role.class
-/MainFrame.class
-/adminFrame$1.class
-/adminFrame.class
-/userFrame$1.class
-/userFrame.class
-/customerFrame$1.class
-/customerFrame.class
-/adminFrame$2.class
-/customerFrame$2.class
-/adminFrame$3.class
-/StockReader.class
-/ConcreteProduct.class
-/Product.class
-/ConnectivityType.class
-/ProductCategory.class
-/Keyboard.class
-/Mouse.class
-/DeviceType.class
-/Layout.class
-/adminFrame$4.class
-/StockManager.class
-/adminFrame$5.class
+/CustomerFrame.class
+/CustomerFrame$1.class
+/CustomerFrame$2.class
+/AdminFrame$1.class
+/AdminFrame$2.class
+/AdminFrame$3.class
+/AdminFrame$4.class
+/AdminFrame$5.class
+/AdminFrame.class
