Update GUI layout and stock information

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -9,3 +9,8 @@
 /AdminFrame.class
 /StockManager$1.class
 /CustomerFrame$3.class
+/Receipt.class
+/CustomerFrame$4.class
+/Basket.class
+/BasketItem.class
+/f319859/
