Update GUI layout and stock information

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,22 +1,9 @@
-/CustomerFrame.class
+/CustomerFrame$9.class
 /CustomerFrame$1.class
 /CustomerFrame$2.class
-/AdminFrame$1.class
-/AdminFrame$2.class
-/AdminFrame$3.class
-/AdminFrame$4.class
-/AdminFrame$5.class
-/AdminFrame.class
-/StockManager$1.class
 /CustomerFrame$3.class
-/Receipt.class
 /CustomerFrame$4.class
-/Basket.class
-/BasketItem.class
-/f319859/
 /CustomerFrame$5.class
 /CustomerFrame$6.class
-/PayPal.class
-/CreditCard.class
 /CustomerFrame$7.class
 /CustomerFrame$8.class
